SubBt/force-app/main/default/objects/Asset_Manager__c/Asset_Manager__c.object-meta.xml
<CustomObject>
    <label>Asset Manager</label>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Manager</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>