SubBt/force-app/main/default/objects/Asset_Manager__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Bad</fullName>
            </value>
            <value>
                <fullName>Maintenance Required</fullName>
            </value>
            <value>
                <fullName>Needs Replaced</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>