SubBt/force-app/main/default/objects/Asset_Manager__c/fields/Purchased_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Date__c</fullName>
    <inlineHelpText>Date the Asset was purchased.</inlineHelpText>
    <label>Purchased Date</label>
    <type>Date</type>
</CustomField>