SubBt/force-app/main/default/objects/Asset_Manager__c/fields/Total_Hours_Used__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Used__c</fullName>
    <label>Total Hours Used</label>
    <summarizedField>Asset_History__c.Hours_Used__c</summarizedField>
    <summaryForeignKey>Asset_History__c.Asset_Manager__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>