SubBt/force-app/main/default/objects/Asset_Manager__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Condition__c</columns>
    <columns>Current_Project__c</columns>
    <columns>Location_on_Jobsite__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Total_Hours_Used__c</columns>
    <columns>Purchase_Price__c</columns>
    <columns>Purchased_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>